fix(selection_slot): added flex
size was broken on smaller screens

--- a/src/stylus/components/_selection-controls.styl
+++ b/src/stylus/components/_selection-controls.styl
@@ -11,6 +11,7 @@ theme(selection-control, "v-input--selection-controls")
   &__input
     color: inherit
     display: inline-flex
+    flex: 1 0 auto
     height: 100%
     position: relative
     margin-right: 8px
